# Valorem

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Dockerfile  FIXES.md  LICENSE  Makefile  README.md  docker-compose.yml  export_valorem.py  pyproject.toml
.claude/: settings.local.json
config/: config.yaml
config/environments/: dev-cuda-ablation.yaml  dev-cuda.yaml  dev.yaml
docs/: EXTRAS.md  MODEL_ROADMAP.md  PRODUCTION_SEQUENCE.md  ROADMAP.md  SPEC.md  ablation_study_notes.md
notebooks/: 00_data_providers_demo.ipynb  01_surface_engine_demo.ipynb  02_ingestion_pipeline.ipynb  03_feature_engineering_demo.ipynb  04_model_exploration.ipynb  05_training_demo.ipynb  06_strategy_risk_demo.ipynb  07_backtest_demo.ipynb  08_paper_trading_demo.ipynb  09_ablation_analysis.ipynb  evaluate_patchtst.ipynb
scripts/: build_features.py  eval_naive_baseline.py  ingest_raw.py  manage_data.py  restore_quotes.py  run_backtest.py  run_paper_trading.py  setup_env.py  train_model.py  update_macro.py  update_spy_market.py
src/: exceptions.py
src/backtest/: __init__.py  data_pipeline.py  engine.py  execution.py  reporting.py  results.py
src/config/: __init__.py  constants.py  env.py  environments.py  loader.py  logging.py  paths.py  schema.py
src/data/: __init__.py
src/data/ingest/: __init__.py  manifest.py  orchestrator.py
src/data/providers/: __init__.py  databento.py  fred.py  mock.py  protocol.py
src/data/quality/: __init__.py  validators.py
src/data/storage/: __init__.py  engine.py  repository.py  schema.py
src/features/: __init__.py  engine.py  validators.py
src/features/global_/: __init__.py  realized_vol.py  returns.py
src/features/macro/: __init__.py  alignment.py  transforms.py
src/features/node/: __init__.py  iv_features.py  microstructure.py  surface.py
src/live/: __init__.py  features.py  ingestion.py  loop.py  monitoring.py  positions.py  router.py  signal_generator.py  state.py  surface_provider.py  symbols.py
src/models/: __init__.py  dataset.py  ensemble.py  graph.py  linear.py  repository.py  results.py
src/models/eval/: __init__.py  metrics.py
src/models/gnn/: __init__.py  model.py
src/models/patchtst/: __init__.py  encoder.py  model.py
src/models/train/: __init__.py  collate.py  data_pipeline.py  loss.py  trainer.py
src/pricing/: __init__.py  historical.py  pricer.py  protocol.py
src/risk/: __init__.py  checker.py  covariance.py  kill_switch.py  portfolio.py  stress.py
src/strategy/: __init__.py  orders.py  selector.py  sizing.py  types.py
src/strategy/positions/: __init__.py  exit_orders.py  exit_signals.py  lifecycle.py  manager.py  rebalance.py
src/strategy/structures/: __init__.py  base.py  calendar.py  iron_condor.py  skew.py  vertical.py
src/surface/: __init__.py  builder.py
src/surface/buckets/: __init__.py  assign.py
src/surface/greeks/: __init__.py  analytical.py
src/surface/iv/: __init__.py  black_scholes.py
src/surface/quality/: __init__.py  filters.py
src/utils/: __init__.py  calculations.py  validation.py
tests/: conftest.py  test_align.py
tests/integration/backtest/: test_backtest_integration.py
tests/integration/config/: test_config_integration.py
tests/integration/data/: __init__.py
tests/integration/data/ingest/: __init__.py  conftest.py  test_manifest_integration.py  test_orchestrator_integration.py
tests/integration/data/storage/: conftest.py  test_database_integration.py
tests/integration/features/: conftest.py  test_feature_engine_integration.py  test_feature_pipeline.py  test_global_macro_pipeline.py
tests/integration/live/: __init__.py  test_databento_connection.py  test_paper_trading_e2e.py  test_state_recovery_integration.py  test_trading_loop_integration.py
tests/integration/models/: __init__.py  conftest.py  test_ablation_variants.py  test_data_pipeline_integration.py  test_dataset_integration.py  test_gnn_integration.py  test_patchtst_integration.py  test_training_integration.py
tests/integration/risk/: test_risk_integration.py
tests/integration/strategy/: __init__.py  test_exit_signals_integration.py  test_order_generation_integration.py  test_position_management_integration.py  test_structures_integration.py
tests/integration/surface/: __init__.py  conftest.py  test_surface_builder_integration.py
tests/unit/: test_exceptions.py
tests/unit/backtest/: test_data_pipeline.py  test_engine.py  test_execution.py  test_reporting.py  test_results.py
tests/unit/config/: test_env.py  test_environments.py  test_loader.py  test_logging.py  test_paths.py  test_schema.py
tests/unit/data/ingest/: __init__.py  test_manifest.py  test_orchestrator.py
tests/unit/data/providers/: test_databento.py  (+3 more)
tests/unit/features/: test_engine.py  test_feature_engine.py  test_validators.py
tests/unit/live/: __init__.py  test_features.py  test_ingestion.py  test_loop.py  test_monitoring.py  test_positions.py  test_router.py  test_signal_generator.py  test_state.py  test_surface_provider.py  test_symbols.py
tests/unit/models/: test_dataset.py  test_ensemble.py  test_gnn.py  test_graph.py  test_linear.py  test_patchtst.py  test_results.py
tests/unit/pricing/: test_historical.py  test_pricer.py
tests/unit/risk/: test_checker.py  test_covariance.py  test_kill_switch.py  test_portfolio.py  test_stress.py
tests/unit/strategy/: __init__.py  test_orders.py  test_selector.py  test_sizing.py  test_types.py
tests/unit/surface/: __init__.py  test_black_scholes.py  test_bucket_assignment.py  test_greeks.py  test_quality_filters.py  test_surface_builder.py
tests/unit/utils/: test_calculations.py  test_greeks_from_row.py  test_validation.py
valorem/data/: patchtst_loader.py
valorem/data/ingestion/: fred.py  polygon.py
valorem/data/preprocessing/: __init__.py  align.py
valorem/evaluation/: eval_patchtst.py
valorem/features/: store.py
valorem/features/compute/: __init__.py  realised_vol.py
valorem/models/: patchtst_model.py
valorem/pipelines/: update_macro.py  update_secondary.py  update_spy_market.py
valorem/training/: train_patchtst.py
(+32 files in other folders)
