[project]
name = "valorem"
version = "0.12.1"
description = "Production-grade volatility arbitrage trading system"
authors = [{ name = "Alex" }]
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",

    # Data providers
    "databento>=0.30.0",
    "requests>=2.31.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "polars>=0.20.0",

    # Storage
    "sqlalchemy>=2.0.25",  # 2.0.25+ has Python 3.12 sqlite3 datetime fixes
    "pyarrow>=14.0",

    # Scientific computing
    "scipy>=1.11",

    # ML/DL
    "torch>=2.1",
    "pytorch-lightning>=2.1",
    "torch-geometric>=2.4",

    # Utilities
    "python-dotenv>=1.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.5",
    "mypy>=1.7",
    "ruff>=0.1",
    "black>=23.0",
    "ipython>=8.18",
    "ipdb>=0.13",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "-n", "auto",
    "--dist", "loadgroup",
]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "databento.*",
    "pandas.*",
    "torch.*",
    "torch_geometric.*",
    "scipy.*",
    "sklearn.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
